5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1671_1872.log
== TEST (2019-04-23 18:31:44) 
-- CODE:
x = int(input("Digite x"))
y = int(input("Digite y"))

if (x>0, y>0):
	print("Q1")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:31:53) 
-- CODE:
x = int(input("Digite x:"))
y = int(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:32:08) 
-- CODE:
x = int(input("Digite x:"))
y = int(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:32:45) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
	
	

-- OUTPUT:
Q1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:35:29) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
elif (x<0, y>0):
	print("Q2")
elif (x<0, y<0):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:35:49) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
elif (x<0, y>0):
	print("Q2")
elif (x<0, y<0):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:36:25) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if (x>0, y>0):
	print("Q1")
elif(x<0, y>0):
	print("Q2")
elif (x<0, y<0):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:37:33) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif(x<0, y>0):
	print("Q2")
elif (x<0, y<0):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:38:24) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif (x<0, y<0):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:38:53) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0 and (y<0)):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- ERROR:
File "XXXX", line 8
    elif ((x<0 and (y<0)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:39:05) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif (x>0, y<0):
	print("Q4")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:39:32) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:40:54) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")

	

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:42:50) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((x=0) and (y<>0)):
	print("Eixo Y")
	

	
	

-- ERROR:
File "XXXX", line 12
    elif ((x=0) and (y<>0)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:43:17) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((x=0) and (y>0) or (y<0)):
	print("Eixo Y")
	

	
	

-- ERROR:
File "XXXX", line 12
    elif ((x=0) and (y>0) or (y<0)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:48:01) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)and(y==0)):
	print("Origem")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:48:23) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)and(y==0)):
	print("Origem")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:48:35) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)and(y==0)):
	print("Origem")

	
	

-- EXECUTION TIME:
0.164351
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:48:41) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)and(y==0)):
	print("Origem")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:49:02) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)or(y==0)):
	print("Origem")

	
	

-- EXECUTION TIME:
0.149564
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:49:06) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
elif ((x==0)or(y==0)):
	print("Origem")

	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:49:59) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif (y==0):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:50:52) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((y==0) and (x=!0)):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- ERROR:
File "XXXX", line 12
    elif ((y==0) and (x=!0)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:51:05) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((y==0) and (x!=0)):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:51:38) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((y==0) and (x!=0)):
	print("Eixo X") 
elif(x==0):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- EXECUTION TIME:
0.156415
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:51:59) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((y==0) and (x!=0)):
	print("Eixo X") 
elif((x==0) and (y!=0)):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:52:10) 
-- CODE:
x = float(input("Digite x:"))
y = float(input("Digite y:"))

if ((x>0) and (y>0)) :
	print("Q1")
elif((x<0) and (y>0)):
	print("Q2")
elif ((x<0) and (y<0)):
	print("Q3")
elif ((x>0) and (y<0)):
	print("Q4")
elif ((y==0) and (x!=0)):
	print("Eixo X") 
elif((x==0) and (y!=0)):
	print("Eixo Y")
else:
	print("Origem")
	
	

-- EXECUTION TIME:
0.146979
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
